force-app/main/default/objects/Picklist__c/Picklist__c.object-meta.xml
<CustomObject>
    <label>Picklist</label>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Picklist Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Picklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>