force-app/main/default/objects/Picklist__c/fields/Crate__c.field-meta.xml
<CustomField>
    <fullName>Crate__c</fullName>
    <formula>IF ( AND(
NOT(ISBLANK(Quantity__c)) ,
NOT(ISBLANK(Product__r.Crate_Conversion__c))
) ,
TEXT(FLOOR(Quantity__c/Product__r.Crate_Conversion__c)) &amp; &quot; Crate &quot; &amp; TEXT(MOD(Quantity__c,Product__r.Crate_Conversion__c)) &amp; &quot; EA &quot; ,
&apos; &apos;)</formula>
    <label>Crate</label>
    <type>Text</type>
</CustomField>