force-app/main/default/objects/Picklist__c/fields/Delivery_Plan__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Plan__c</fullName>
    <label>Delivery Plan</label>
    <referenceTo>Delivery_Plan__c</referenceTo>
    <relationshipLabel>Picklist(Delivery Plan)</relationshipLabel>
    <relationshipName>DeliveryPlan</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>