force-app/main/default/objects/Picklist__c/fields/UOM__c.field-meta.xml
<CustomField>
    <fullName>UOM__c</fullName>
    <label>UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>